--- a/Topicos/Content/style.css
+++ b/Topicos/Content/style.css
@@ -18,7 +18,7 @@ a {
 }
 
     a:hover, a:focus {
-        color: #0092FF;
+        color: #DAA520;
         text-decoration: none;
         outline: none;
     }
@@ -35,7 +35,7 @@ ul, ol {
 .primary-btn {
     display: inline-block;
     padding: 12px 30px;
-    background-color: #0092FF;
+    background-color: #DAA520;
     border: none;
     border-radius: 40px;
     color: #FFF;
@@ -119,7 +119,7 @@ textarea.input {
 
         .input-number .qty-up:hover, .input-number .qty-down:hover {
             background-color: #E4E7ED;
-            color: #0092FF;
+            color: #DAA520;
         }
 
 /*-- Select input --*/
@@ -199,8 +199,8 @@ textarea.input {
     }
 
     .input-radio input[type="radio"]:checked + label span, .input-checkbox input[type="checkbox"]:checked + label span {
-        background-color: #0092FF;
-        border-color: #0092FF;
+        background-color: #DAA520;
+        border-color: #DAA520;
     }
 
         .input-radio input[type="radio"]:checked + label span:after {
@@ -277,13 +277,13 @@ textarea.input {
             display: block;
             width: 0%;
             height: 2px;
-            background-color: #0092FF;
+            background-color: #DAA520;
             -webkit-transition: 0.2s all;
             transition: 0.2s all;
         }
 
     .section-tab-nav li.active a {
-        color: #0092FF;
+        color: #DAA520;
     }
 
         .section-tab-nav li a:hover:after, .section-tab-nav li a:focus:after, .section-tab-nav li.active a:after {
@@ -341,7 +341,7 @@ textarea.input {
             }
 
                 #breadcrumb .breadcrumb-tree li a:hover {
-                    color: #0092FF;
+                    color: #DAA520;
                 }
 
 /*=========================================================
@@ -373,11 +373,11 @@ textarea.input {
     }
 
         .header-links li a:hover {
-            color: #0092FF;
+            color: #DAA520;
         }
 
     .header-links li i {
-        color: #0092FF;
+        color: #DAA520;
         margin-right: 5px;
     }
 
@@ -426,7 +426,7 @@ textarea.input {
         .header-search form .search-btn {
             height: 40px;
             width: 100px;
-            background: #0092FF;
+            background: #DAA520;
             color: #FFF;
             font-weight: 700;
             border: none;
@@ -478,7 +478,7 @@ textarea.input {
                 border-radius: 50%;
                 font-size: 10px;
                 color: #FFF;
-                background-color: #0092FF;
+                background-color: #DAA520;
             }
 
     .header-ctn .menu-toggle {
@@ -536,7 +536,7 @@ textarea.input {
         display: inline-block;
         width: calc(50% - 0px);
         padding: 12px;
-        background-color: #0092FF;
+        background-color: #DAA520;
         color: #FFF;
         text-align: center;
         font-weight: 700;
@@ -566,7 +566,7 @@ textarea.input {
 #navigation {
     background: #FFF;
     border-bottom: 2px solid #E4E7ED;
-    border-top: 3px solid #0092FF;
+    border-top: 3px solid #DAA520;
 }
 
 /*----------------------------*\
@@ -582,7 +582,7 @@ textarea.input {
 }
 
     .main-nav > li > a:hover, .main-nav > li > a:focus, .main-nav > li.active > a {
-        color: #0092FF;
+        color: #DAA520;
         background-color: transparent;
     }
 
@@ -591,7 +591,7 @@ textarea.input {
         display: block;
         width: 0%;
         height: 2px;
-        background-color: #0092FF;
+        background-color: #DAA520;
         -webkit-transition: 0.2s all;
         transition: 0.2s all;
     }
@@ -675,8 +675,8 @@ textarea.input {
         bottom: 0;
         left: 0px;
         width: 60%;
-        /*background: #0092FF;*/
-        background: #0092FF;
+        /*background: #DAA520;*/
+        background: #DAA520;
         opacity: 0.9;
         -webkit-transform: skewX(-45deg);
         -ms-transform: skewX(-45deg);
@@ -690,7 +690,7 @@ textarea.input {
         bottom: 0;
         left: 1px;
         width: 100%;
-        background: #0092FF;
+        background: #DAA520;
         opacity: 0.9;
         -webkit-transform: skewX(-45deg) translateX(-100%);
         -ms-transform: skewX(-45deg) translateX(-100%);
@@ -813,8 +813,8 @@ textarea.input {
 }
 
     .product:hover {
-        -webkit-box-shadow: 0px 0px 6px 0px #E4E7ED, 0px 0px 0px 2px #0092FF;
-        box-shadow: 0px 0px 6px 0px #E4E7ED, 0px 0px 0px 2px #0092FF;
+        -webkit-box-shadow: 0px 0px 6px 0px #E4E7ED, 0px 0px 0px 2px #DAA520;
+        box-shadow: 0px 0px 6px 0px #E4E7ED, 0px 0px 0px 2px #DAA520;
     }
 
     .product .product-img {
@@ -839,13 +839,13 @@ textarea.input {
 
                 .product .product-img .product-label > span.sale {
                     background-color: #FFF;
-                    border-color: #0092FF;
-                    color: #0092FF;
+                    border-color: #DAA520;
+                    color: #DAA520;
                 }
 
                 .product .product-img .product-label > span.new {
-                    background-color: #0092FF;
-                    border-color: #0092FF;
+                    background-color: #DAA520;
+                    border-color: #DAA520;
                     color: #FFF;
                 }
 
@@ -873,11 +873,11 @@ textarea.input {
             }
 
                 .product .product-body .product-name > a:hover, .product .product-body .product-name > a:focus {
-                    color: #0092FF;
+                    color: #DAA520;
                 }
 
         .product .product-body .product-price {
-            color: #0092FF;
+            color: #DAA520;
             font-size: 18px;
         }
 
@@ -903,7 +903,7 @@ textarea.input {
             }
 
                 .product .product-body .product-rating > i.fa-star {
-                    color: #0083E5;
+                    color: #DAA520;
                 }
 
             .product .product-body .product-rating:after {
@@ -932,7 +932,7 @@ textarea.input {
 
             .product .product-body .product-btns > button:hover {
                 background-color: #E4E7ED;
-                color: #0092FF;
+                color: #DAA520;
                 border-radius: 50%;
             }
 
@@ -992,7 +992,7 @@ textarea.input {
         border: 2px solid transparent;
         height: 40px;
         padding: 7px 30px;
-        background-color: #0083E5;
+        background-color: #DAA520;
         color: #FFF;
         text-transform: uppercase;
         font-weight: 700;
@@ -1008,15 +1008,15 @@ textarea.input {
             width: 40px;
             height: 40px;
             line-height: 38px;
-            color: #0092FF;
+            color: #DAA520;
             opacity: 0;
             visibility: hidden;
         }
 
         .product .add-to-cart .add-to-cart-btn:hover {
             background-color: #FFF;
-            color: #0092FF;
-            border-color: #0092FF;
+            color: #DAA520;
+            border-color: #DAA520;
             padding: 7px 30px 0px 50px;
         }
 
@@ -1069,12 +1069,12 @@ textarea.input {
             }
 
                 .product-widget .product-body .product-name > a:hover, .product-widget .product-body .product-name > a:focus {
-                    color: #0092FF;
+                    color: #DAA520;
                 }
 
         .product-widget .product-body .product-price {
             font-size: 14px;
-            color: #0092FF;
+            color: #DAA520;
         }
 
             .product-widget .product-body .product-price .product-old-price {
@@ -1200,7 +1200,7 @@ textarea.input {
 }
 
 .noUi-connect {
-    background-color: #0092FF;
+    background-color: #DAA520;
 }
 
 .noUi-horizontal {
@@ -1213,7 +1213,7 @@ textarea.input {
         left: -6px;
         top: -4px;
         border: none;
-        background: #0092FF;
+        background: #DAA520;
         -webkit-box-shadow: none;
         box-shadow: none;
         border-radius: 50%;
@@ -1274,12 +1274,12 @@ textarea.input {
 
         .store-grid li:hover {
             background-color: #E4E7ED;
-            color: #0092FF;
+            color: #DAA520;
         }
 
         .store-grid li.active {
-            background-color: #0092FF;
-            border-color: #0092FF;
+            background-color: #DAA520;
+            border-color: #DAA520;
             color: #FFF;
             cursor: default;
         }
@@ -1312,12 +1312,12 @@ textarea.input {
 
         .store-pagination li:hover {
             background-color: #E4E7ED;
-            color: #0092FF;
+            color: #DAA520;
         }
 
         .store-pagination li.active {
-            background-color: #0092FF;
-            border-color: #0092FF;
+            background-color: #DAA520;
+            border-color: #DAA520;
             color: #FFF;
             font-weight: 500;
             cursor: default;
@@ -1381,7 +1381,7 @@ textarea.input {
 }
 
     #product-imgs .product-preview.slick-current {
-        border-color: #0092FF;
+        border-color: #DAA520;
     }
 
 #product-imgs .slick-prev {
@@ -1431,7 +1431,7 @@ textarea.input {
     }
 
         .product-details .product-rating > i.fa-star {
-            color: #0092FF;
+            color: #DAA520;
         }
 
 .product-details .review-link {
@@ -1443,7 +1443,7 @@ textarea.input {
     font-size: 24px;
     margin-top: 10px;
     margin-bottom: 15px;
-    color: #0092FF;
+    color: #DAA520;
 }
 
     .product-details .product-price .product-old-price {
@@ -1457,7 +1457,7 @@ textarea.input {
     text-transform: uppercase;
     font-weight: 700;
     margin-left: 30px;
-    color: #0092FF;
+    color: #DAA520;
 }
 
 .product-details .product-options {
@@ -1486,7 +1486,7 @@ textarea.input {
         border: 2px solid transparent;
         height: 40px;
         padding: 0 30px;
-        background-color: #0083E5;
+        background-color: #DAA520;
         color: #FFF;
         text-transform: uppercase;
         font-weight: 700;
@@ -1502,15 +1502,15 @@ textarea.input {
             width: 40px;
             height: 40px;
             line-height: 38px;
-            color: #0092FF;
+            color: #DAA520;
             opacity: 0;
             visibility: hidden;
         }
 
         .product-details .add-to-cart .add-to-cart-btn:hover {
             background-color: #FFF;
-            color: #0092FF;
-            border-color: #0092FF;
+            color: #DAA520;
+            border-color: #DAA520;
             padding: 0px 30px 0px 50px;
         }
 
@@ -1600,7 +1600,7 @@ textarea.input {
             }
 
             #product-tab .tab-nav li.active a {
-                color: #0092FF;
+                color: #DAA520;
             }
 
             #product-tab .tab-nav li a:after {
@@ -1608,7 +1608,7 @@ textarea.input {
                 display: block;
                 width: 0%;
                 height: 2px;
-                background-color: #0092FF;
+                background-color: #DAA520;
                 -webkit-transition: 0.2s all;
                 transition: 0.2s all;
             }
@@ -1638,7 +1638,7 @@ textarea.input {
         }
 
             .rating-avg .rating-stars > i.fa-star, .rating .rating-stars > i.fa-star {
-                color: #0092FF;
+                color: #DAA520;
             }
 
 .rating li {
@@ -1656,7 +1656,7 @@ textarea.input {
 }
 
     .rating .rating-progress > div {
-        background-color: #0092FF;
+        background-color: #DAA520;
         position: absolute;
         left: 0;
         top: 0;
@@ -1710,7 +1710,7 @@ textarea.input {
     }
 
         .reviews .review-heading .review-rating > i.fa-star {
-            color: #0092FF;
+            color: #DAA520;
         }
 
 .reviews-pagination {
@@ -1731,12 +1731,12 @@ textarea.input {
 
         .reviews-pagination li:hover {
             background-color: #E4E7ED;
-            color: #0092FF;
+            color: #DAA520;
         }
 
         .reviews-pagination li.active {
-            background-color: #0092FF;
-            border-color: #0092FF;
+            background-color: #DAA520;
+            border-color: #DAA520;
             color: #FFF;
             cursor: default;
         }
@@ -1780,12 +1780,12 @@ textarea.input {
             }
 
             .review-form .input-rating .stars > label:hover:before, .review-form .input-rating .stars > label:hover ~ label:before {
-                color: #0092FF;
+                color: #DAA520;
             }
 
         .review-form .input-rating .stars > input:checked label:before, .review-form .input-rating .stars > input:checked ~ label:before {
             content: "\f005";
-            color: #0092FF;
+            color: #DAA520;
         }
 
 /*=========================================================
@@ -1852,7 +1852,7 @@ textarea.input {
 
         .order-summary .order-col .order-total {
             font-size: 24px;
-            color: #0092FF;
+            color: #DAA520;
         }
 
 .order-details .payment-method {
@@ -1871,7 +1871,7 @@ textarea.input {
 
 #newsletter.section {
     border-top: 2px solid #E4E7ED;
-    border-bottom: 3px solid #0092FF;
+    border-bottom: 3px solid #DAA520;
     margin-top: 30px;
 }
 
@@ -1913,7 +1913,7 @@ textarea.input {
             width: 160px;
             height: 40px;
             font-weight: 700;
-            background: #0092FF;
+            background: #DAA520;
             color: #FFF;
             border: none;
             border-radius: 0px 40px 40px 0px;
@@ -1947,7 +1947,7 @@ textarea.input {
 
                 .newsletter .newsletter-follow li a:hover, .newsletter .newsletter-follow li a:focus {
                     background-color: #E4E7ED;
-                    color: #0092FF;
+                    color: #DAA520;
                 }
 
 
@@ -1958,7 +1958,7 @@ textarea.input {
 .login-btn {
     height: 40px;
     width: 100px;
-    background: #0092FF;
+    background: #DAA520;
     color: #FFF;
     font-weight: 700;
     border: none;
@@ -2008,13 +2008,13 @@ textarea.input {
 
 .footer-links li i {
     margin-right: 15px;
-    color: #0092FF;
+    color: #DAA520;
     width: 14px;
     text-align: center;
 }
 
 .footer-links li a:hover {
-    color: #0092FF;
+    color: #DAA520;
 }
 
 .copyright {
@@ -2054,8 +2054,8 @@ textarea.input {
 }
 
     .slick-prev:hover, .slick-prev:focus, .slick-next:hover, .slick-next:focus {
-        background-color: #0092FF;
-        border-color: #0092FF;
+        background-color: #DAA520;
+        border-color: #DAA520;
     }
 
     .slick-prev:before, .slick-next:before {
@@ -2100,7 +2100,7 @@ textarea.input {
     }
 
     .slick-dots li.slick-active button:before {
-        background-color: #0092FF;
+        background-color: #DAA520;
     }
 
 .custom-dots .slick-dots {
